--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>World Clock</title>  
 </head>
 
@@ -16,6 +17,7 @@
     <p id="showhtml2"></p>
     <hr/>
     <script src="script\script.js"></script>
+
 </body>
 
 </html>
