--- a/index.html
+++ b/index.html
@@ -2,22 +2,25 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>World Time JSON</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <title>World Clock</title>  
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Dosis:400,700" rel="stylesheet">
+
 </head>
 
-<body>   
-    <hr/> 
-    <h1>Read a JSON using FETCH with JS .</h1>        
-    <hr/>    
+<body style="margin-left: 50px;">
+    <hr />
+    <h1>Read a JSON using FETCH with JavaScript .</h1>
+    <hr />
     <p id="showhtml"></p>
-    <hr/>
+    <hr />
     <p id="showhtml2"></p>
-    <hr/>
+    <hr />
     <script src="script\script.js"></script>
-
 </body>
 
 </html>
